--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,38 @@
   font-weight: 300;
   font-size: 0.95rem;
 }
+
 button,
 button:hover {
   border: none;
   color: #fff;
   padding: 10px;
+}
+
+h1 {
+  font-size: 1.5rem;
+}
+
+strong {
+  font-weight: bold;
+}
+
+.login-container {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.login-container .login-form {
+  width: 300px;
+  text-align: center;
+  padding: 2vh 0;
+}
+.login-container .login-form .login-form-field {
+  display: flex;
+  justify-content: space-around;
+  margin: 10px 0;
+}
+.login-container .login-form .login-form-field input {
+  padding: 2px 5px;
 }
