--- a/src/components/App.css
+++ b/src/components/App.css
@@ -140,6 +140,10 @@ button:disabled {
   border-radius: 5px;
   margin: 10px;
 }
+.chat__sidebar li.active {
+  background-color: #cdd46b;
+  color: green;
+}
 .chat__main {
   display: flex;
   flex-direction: column;
