--- a/src/components/App.css
+++ b/src/components/App.css
@@ -9,7 +9,7 @@ ul {
 h3 {
   font-weight: 600;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 button {
   background: #265f82;
@@ -130,6 +130,20 @@ button:disabled {
   background: #e6eaee;
   padding: 10px;
 }
+.chat__sidebar h2 {
+  background: #e6eaee;
+  border: 1px solid #e1e1e1;
+  border-radius: 5px;
+  color: #e6eaee;
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin: 10px;
+  padding: 5px 10px;
+  text-align: left;
+}
+.chat__sidebar h2.active {
+  color: blue;
+}
 .chat__sidebar h3 {
   color: #e6eaee;
   margin: 10px 20px;
@@ -141,8 +155,7 @@ button:disabled {
   margin: 10px;
 }
 .chat__sidebar li.active {
-  background-color: #cdd46b;
-  color: green;
+  background-color: #6bcdd4;
 }
 .chat__main {
   display: flex;
