--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ strong {
 
 .login-container {
   height: 100vh;
+  width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
