Adding notification for new messages

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -167,6 +167,12 @@ button:disabled {
 .chat__sidebar li.is-typing {
   background-color: #6bcdd4;
 }
+.chat__sidebar li.new-msg {
+  font-style: oblique;
+}
+.chat__sidebar li.new-msg:after {
+  content: ' *';
+}
 .chat__main {
   display: flex;
   flex-direction: column;
