Distinguish between public and private typing notifications

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -168,7 +168,7 @@ button:disabled {
   background-color: #6bcdd4;
 }
 .chat__sidebar li.new-msg {
-  color: magenta;
+  color: darkmagenta;
   font-style: oblique;
 }
 .chat__main {
